--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-sass": "^1.3.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "mv": "^2.1.1"
   },
   "scripts": {
     "start": "node app.js"
