--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-prism": "^3.0.1",
     "metalsmith-sass": "^1.3.0",
     "mkdirp": "^0.5.1",
     "mv": "^2.1.1"
